--- a/index.html
+++ b/index.html
@@ -150,19 +150,23 @@
         <div class="projects-grid card js-animate">
 
             <div class="project-item" data-category="fullstack">
-                <h3>Project One</h3>
-                <p>A web application that allows users to track their tasks...</p>
+                <h3>Commercial E-Shop</h3>
+                <p>A comprehensive full-stack e-commerce application built with the MERN stack. Features include secure
+                    user authentication, product filtering, shopping cart management, and payment integration.</p>
                 <p class="tech-stack">**Tech:** React, Node.js, Express, MongoDB</p>
-                <a href="#">View Demo</a> | <a href="#">GitHub</a>
+                <a href="https://ecoshop-alpha.vercel.app" target="_blank">View Demo</a> | <a
+                    href="https://github.com/Br1zz1713/ecoshop" target="_blank">GitHub</a>
             </div>
 
             <hr class="project-separator">
 
-            <div class="project-item" data-category="backend">
-                <h3>Project Two</h3>
-                <p>An e-commerce platform with a user-friendly interface...</p>
-                <p class="tech-stack">**Tech:** HTML, CSS, Flask (Python), PostgreSQL</p>
-                <a href="#">View Demo</a> | <a href="#">GitHub</a>
+            <div class="project-item" data-category="frontend">
+                <h3>Personal Portfolio</h3>
+                <p>A responsive personal portfolio website featuring dark mode, interactive animations, and a dynamic
+                    project gallery. Built to showcase skills and projects.</p>
+                <p class="tech-stack">**Tech:** HTML, CSS, JavaScript</p>
+                <a href="#" class="no-click">View Demo</a> | <a href="https://github.com/Br1zz1713/my-portfolio"
+                    target="_blank">GitHub</a>
             </div>
 
         </div>
