Update portfolio projects

--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
 
             <div class="project-item" data-category="fullstack">
                 <h3>Commercial E-Shop</h3>
-                <p>A comprehensive full-stack e-commerce application built with the MERN stack. Features include secure
-                    user authentication, product filtering, shopping cart management, and payment integration.</p>
-                <p class="tech-stack">**Tech:** React, Node.js, Express, MongoDB</p>
+                <p>A comprehensive full-stack e-commerce application built with a separate frontend and backend.
+                    Features include secure user authentication (JWT), complex product filtering, cart management, and
+                    payment integration.</p>
+                <p class="tech-stack">**Tech:** React (Vite), Django REST Framework, PostgreSQL, Tailwind CSS</p>
                 <a href="https://ecoshop-alpha.vercel.app" target="_blank">View Demo</a> | <a
                     href="https://github.com/Br1zz1713/ecoshop" target="_blank">GitHub</a>
             </div>
@@ -162,9 +163,10 @@
 
             <div class="project-item" data-category="frontend">
                 <h3>Personal Portfolio</h3>
-                <p>A responsive personal portfolio website featuring dark mode, interactive animations, and a dynamic
-                    project gallery. Built to showcase skills and projects.</p>
-                <p class="tech-stack">**Tech:** HTML, CSS, JavaScript</p>
+                <p>A responsive personal portfolio website featuring dark mode, interactive animations
+                    (Canvas/IntersectionObserver), and a dynamic project gallery. Built without frameworks to
+                    demonstrate core web fundamentals.</p>
+                <p class="tech-stack">**Tech:** HTML5, CSS3 (Variables & Flexbox), Vanilla JavaScript</p>
                 <a href="#" class="no-click">View Demo</a> | <a href="https://github.com/Br1zz1713/my-portfolio"
                     target="_blank">GitHub</a>
             </div>
