Add PropText.ai to portfolio projects

--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
         <div class="projects-grid card js-animate">
 
             <div class="project-item" data-category="fullstack">
+                <h3>PropText.ai</h3>
+                <p>An AI-powered SaaS platform for generating professional real estate listing descriptions.
+                    Features include user authentication, credit-based billing system, Stripe payment integration,
+                    and AI-generated content using Google Gemini API.</p>
+                <p class="tech-stack">**Tech:** Next.js, TypeScript, Supabase, Stripe, Google Gemini API, Tailwind CSS
+                </p>
+                <a href="https://proptext-ai.vercel.app" target="_blank">View Demo</a> | <a
+                    href="https://github.com/Br1zz1713/PropText.ai" target="_blank">GitHub</a>
+            </div>
+
+            <hr class="project-separator">
+
+            <div class="project-item" data-category="fullstack">
                 <h3>Commercial E-Shop</h3>
                 <p>A comprehensive full-stack e-commerce application built with a separate frontend and backend.
                     Features include secure user authentication (JWT), complex product filtering, cart management, and
