Fix PropText.ai demo URL

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     and AI-generated content using Google Gemini API.</p>
                 <p class="tech-stack">**Tech:** Next.js, TypeScript, Supabase, Stripe, Google Gemini API, Tailwind CSS
                 </p>
-                <a href="https://proptext-ai.vercel.app" target="_blank">View Demo</a> | <a
+                <a href="https://prop-text-ai.vercel.app" target="_blank">View Demo</a> | <a
                     href="https://github.com/Br1zz1713/PropText.ai" target="_blank">GitHub</a>
             </div>
 
