Update PropText.ai GitHub URL

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <p class="tech-stack">**Tech:** Next.js, TypeScript, Supabase, Stripe, Google Gemini API, Tailwind CSS
                 </p>
                 <a href="https://prop-text-ai.vercel.app" target="_blank">View Demo</a> | <a
-                    href="https://github.com/Br1zz1713/PropText.ai" target="_blank">GitHub</a>
+                    href="https://github.com/Br1zz1713/PropText-ai" target="_blank">GitHub</a>
             </div>
 
             <hr class="project-separator">
